# CPSC_370_Intro_To_Computer_Cryptology

./: .gitignore
Ciphers/ShiftCipher/.cache/clangd/index/: ProgramOptions.cpp.CD6BAD8668AA180B.idx  ProgramOptions.hpp.883F088CE4711DCB.idx  main.cpp.28998FE1DD39261D.idx
Homework/Hands-on-2/: .clang-format  CMakeLists.txt  main.cpp
Homework/Hands-on-3/: CMakeLists.txt  main.cpp
Homework/Hands-on-5/: CMakeLists.txt  main.cpp
Homework/PA1/: Affine.cpp  Affine.h  CMakeLists.txt  Utility.cpp  Utility.h  main.cpp
Homework/PA1/app/: CMakeLists.txt  main.cpp
Homework/PA1/libs/ciphers/: Affine.cpp  CMakeLists.txt  Hill.cpp  Shift.cpp  Transposition.cpp  Utility.cpp
Homework/PA1/libs/ciphers/include/: Affine.h  Utility.h
Homework/PA1/libs/ciphers/include/ciphers/: Affine.h  Hill.h  Shift.h  Transposition.h  Utility.h
Homework/PA2/: CMakeLists.txt  README.md
Homework/PA2/app/: main.cpp
Homework/PA2/libs/: CMakeLists.txt
Homework/PA2/libs/cipher/: CBC.cpp  CMakeLists.txt  SDES.cpp  U.cpp
Homework/PA2/libs/cipher/include/cipher/: CBC.h  SDES.h  U.h
Homework/PA2/libs/cipher/tests/: CMakeLists.txt  main.cpp
Latex_Template/: homework.tex
Notes/: Chapter_3-1_Classical_Encryption_Techniques.md
S-AES/: CMakeLists.txt  README.md
S-AES/app/: CMakeLists.txt  main.cpp
S-AES/documents/: outline.tex  paper.tex
S-AES/libs/cipher/: CMakeLists.txt  DCA.cpp  SAES.cpp  U.cpp  Utility.cpp
S-AES/libs/cipher/include/cipher/: DCA.h  SAES.h  U.h  Utility.h
S-AES/libs/cipher/tests/: CMakeLists.txt  main.cpp
latex_template/: homework.tex  notes.tex  template.tex
